tests/baselines/reference/parserForOfStatement15.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement15.ts(1,20): error TS2304: Cannot find name 'X'.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement15.ts (1 errors) ====
    for (var [a, b] of X) {
                       ~
!!! error TS2304: Cannot find name 'X'.
    }